--- a/app/package.json
+++ b/app/package.json
@@ -6,17 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@cetusprotocol/aggregator-sdk": "^1.1.1",
+    "@mysten/dapp-kit": "^1.0.3",
+    "@mysten/sui": "^2.3.2",
+    "@tanstack/react-query": "^5.90.10",
+    "bn.js": "^5.2.2",
+    "framer-motion": "11.11.11",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "framer-motion": "11.11.11"
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "jsdom": "^28.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^4.0.18"
   }
 }
