Add marketplace env and listing fall

--- a/app/.env.example
+++ b/app/.env.example
@@ -3,6 +3,7 @@ VITE_SUI_NETWORK=testnet
 # Linage Move package + shared object ids
 VITE_LINAGE_PACKAGE_ID=0xYOUR_PACKAGE_ID
 VITE_LINAGE_PLATFORM_CONFIG_ID=0xYOUR_PLATFORM_CONFIG_ID
+VITE_LINAGE_MARKETPLACE_ID=0xYOUR_MARKETPLACE_ID
 VITE_LINAGE_COLLECTIBLE_REGISTRY_ID=0xYOUR_COLLECTIBLE_REGISTRY_ID
 
 # Settlement token (USDC fallback path)
