feat: Add gas budget configuration and enhance transaction error handling
Add `VITE_LINAGE_DEFAULT_TX_GAS_BUDGET` environment variable and integrate it into transaction building. Optimize SUI swap flow by using `tx.gas` split instead of fetching coins separately. Implement `selectCoinsForPayment` to pick fewest coins needed for payments. Add comprehensive error handling with listing refresh on purchase failures. Remove fallback listing IDs in favor of marketplace index resolution. Include unit tests for coin

--- a/app/.env
+++ b/app/.env
@@ -13,4 +13,5 @@ VITE_LINAGE_EMBROIDERY_LISTING_ID=0x37cfd5818b07df014e63cb9fe47d322573830c9d6798
 VITE_LINAGE_DEFAULT_INPUT_COIN_TYPE=0x2::sui::SUI
 VITE_LINAGE_DEFAULT_MINT_INPUT_AMOUNT=100000000
 VITE_LINAGE_DEFAULT_SWAP_SLIPPAGE=0.01
+VITE_LINAGE_DEFAULT_TX_GAS_BUDGET=100000000
 VITE_LINAGE_DEFAULT_PAYMENT_AMOUNT=0.1
