--- a/app/.env.example
+++ b/app/.env.example
@@ -18,4 +18,5 @@ VITE_LINAGE_EMBROIDERY_LISTING_ID=0xYOUR_EMBROIDERY_LISTING_ID
 VITE_LINAGE_DEFAULT_INPUT_COIN_TYPE=0x2::sui::SUI
 VITE_LINAGE_DEFAULT_MINT_INPUT_AMOUNT=100000000
 VITE_LINAGE_DEFAULT_SWAP_SLIPPAGE=0.01
+VITE_LINAGE_DEFAULT_TX_GAS_BUDGET=100000000
 VITE_LINAGE_DEFAULT_PAYMENT_AMOUNT=0.1
